# Own-String-Class

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
Attachments/: CODE STYLE.docx  OOP lab 1 task.docx  Report.docx
Source/: CMakeLists.txt  main.cpp
Source/include/: MyString.hpp  MyString.ipp
Source/src/: CMakeLists.txt  MyString.cpp  MyString.hpp
Source/test/: CMakeLists.txt  base_operator_unittests.cpp  constructor_unittests.cpp  find_unitests.cpp  insert_erase_append_unittests.cpp  main.cpp  methods_unittests.cpp  operator_overloading_unittests.cpp  replace_unittests.cpp  substr_unittests.cpp  test.in
Source/test/in/: small.in
Source/test/unittests/: CMakeLists.txt  base_operator_unittests.cpp  find_unitests.cpp  replace_unittests.cpp  substr_unittests.cpp
